--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -47,7 +47,7 @@
 %.au
 \author{Original version - Eric S. Raymond\\
 (Edited and expanded for 3.7.0 by Mike Stephenson and others)}
-%DO NOT REMOVE NH_DATESUB \date{DATE(%B %-d, %Y)}
+%DO NOT REMOVE NH_DATESUB \date{Date(%B %-d, %Y)}
 \date{September 13, 2024}
 
 \maketitle
