--- a/doc/nethack.6
+++ b/doc/nethack.6
@@ -1,4 +1,4 @@
-.\"DO NOT REMOVE NH_DATESUB .TH NETHACK 6 "DATE(%-d %B %Y)" NETHACK
+.\"DO NOT REMOVE NH_DATESUB .TH NETHACK 6 "DATE(%-d %B %Y)" Project(uc)
 .TH NETHACK 6 "21 February 2022" NETHACK
 .\"DO NOT REMOVE NH_DATESUB .ds Nd DATE(%Y)
 .ds Nd 2022
