--- a/doc/makedefs.6
+++ b/doc/makedefs.6
@@ -1,4 +1,4 @@
-.\"DO NOT REMOVE NH_DATESUB .TH MAKEDEFS 6 "DATE(%-d %B %Y)" NETHACK
+.\"DO NOT REMOVE NH_DATESUB .TH MAKEDEFS 6 "DATE(%-d %B %Y)" Project(uc)
 .TH MAKEDEFS 6 "8 February 2022" NETHACK
 .\"DO NOT REMOVE NH_DATESUB .ds Nd DATE(%Y)
 .ds Nd 2022
