Hero remembers trapped boxes
After finding a trap on a chest or a large box, remember it
as trapped: "You see here a trapped large box."
Randomly generated chests and boxes can be obviously trapped.
Allow defining obviously trapped containers via lua.

Invalidates saves and bones.

--- a/doc/lua.adoc
+++ b/doc/lua.adoc
@@ -849,6 +849,7 @@ The table parameter accepts the following:
 | eroded      | int      | Object erosion
 | locked      | boolean  | Is the object locked?
 | trapped     | boolean  | Is the object trapped?
+| trap_known  | boolean  | If container is trapped, is it obvious?
 | recharged   | boolean  | Is the object recharged?
 | greased     | boolean  | Is the object greased?
 | broken      | boolean  | Is the object broken?
