--- a/doc/dlb.6
+++ b/doc/dlb.6
@@ -11,6 +11,11 @@
 ..
 .NB $NHDT-Branch: keni-gitset $
 .NR $NHDT-Revision: 1.13 $
+.\" groff and AT&T-descended troffs use different hyphenation patterns. 
+.\" Don't hyphenate the last word on a page or column, or
+.\" before/after last/first 2 characters of a word.
+.ie \n(.g .hy 12
+.el       .hy 14
 .ds Na Kenneth Lorber
 .SH NAME
 dlb \- NetHack data librarian
