--- a/doc/nethack.6
+++ b/doc/nethack.6
@@ -10,6 +10,11 @@
 ..
 .NB $NHDT-Branch: NetHack-3.7 $
 .NR $NHDT-Revision: 1.31 $
+.\" groff and AT&T-descended troffs use different hyphenation patterns.
+.\" Don't hyphenate the last word on a page or column, or
+.\" before/after last/first 2 characters of a word.
+.ie \n(.g .hy 12
+.el       .hy 14
 .ds Na Robert Patrick Rankin
 .SH NAME
 nethack \- Exploring The Mazes of Menace
