--- a/doc/recover.6
+++ b/doc/recover.6
@@ -10,6 +10,11 @@
 ..
 .NB $NHDT-Branch: NetHack-3.7 $
 .NR $NHDT-Revision: 1.12 $
+.\" groff and AT&T-descended troffs use different hyphenation patterns. 
+.\" Don't hyphenate the last word on a page or column, or
+.\" before/after last/first 2 characters of a word.
+.ie \n(.g .hy 12
+.el       .hy 14
 .ds Na Kenneth Lorber
 .SH NAME
 recover \- recover a NetHack game interrupted by disaster
