Fix header spelling error "DATE" -> "Date"; force update dates.

--- a/doc/nethack.6
+++ b/doc/nethack.6
@@ -1,7 +1,7 @@
-.\"DO NOT REMOVE NH_DATESUB .TH NETHACK 6 "DATE(%-d %B %Y)" Project(uc)
-.TH NETHACK 6 "21 February 2022" NETHACK
-.\"DO NOT REMOVE NH_DATESUB .ds Nd DATE(%Y)
-.ds Nd 2022
+.\"DO NOT REMOVE NH_DATESUB .TH NETHACK 6 "Date(%-d %B %Y)" Project(uc)
+.TH NETHACK 6 "25 December 2024" NETHACK
+.\"DO NOT REMOVE NH_DATESUB .ds Nd Date(%Y)
+.ds Nd 2024
 .de NB
 .ds Nb \\$2
 ..
