--- a/doc/recover.6
+++ b/doc/recover.6
@@ -1,7 +1,7 @@
-.\"DO NOT REMOVE NH_DATESUB .TH RECOVER 6 "DATE(%-d %B %Y)" Project(uc)
-.TH RECOVER 6 "8 February 2022" NETHACK
-.\"DO NOT REMOVE NH_DATESUB .ds Nd DATE(%Y)
-.ds Nd 2022
+.\"DO NOT REMOVE NH_DATESUB .TH RECOVER 6 "Date(%-d %B %Y)" Project(uc)
+.TH RECOVER 6 "25 December 2024" NETHACK
+.\"DO NOT REMOVE NH_DATESUB .ds Nd Date(%Y)
+.ds Nd 2024
 .de NB
 .ds Nb \\$2
 ..
