--- a/doc/lua.adoc
+++ b/doc/lua.adoc
@@ -794,7 +794,8 @@ The hash parameter accepts the following keys:
 | ignorewater    | boolean | ignore water when choosing location for the monster
 | countbirth     | boolean | do we count this monster as generated
 | appear_as      | string | monster can appear as object, monster, or terrain. Add "obj:", "mon:", or "ter:" prefix to the value. |
-| inventory      | function | objects generated in the function are given to the monster
+| inventory      | function | objects generated in the function are given to the monster (any random inventory it gets is discarded unless keep_default_invent is true)
+| keep_default_invent | boolean | if inventory is specified and this is true, those items are in addition to random inventory for this species; if inventory is not specified and this is false, monster gets no starting inventory
 |===
 
 Example:
