--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -5513,6 +5513,10 @@ Use bold black instead of blue for black glyphs (TTY only).
 \item[\ib{use\verb+_+inverse}]
 If {\it NetHack\/} can, it should display inverse when the game specifies it.
 %.lp
+\item[\ib{use\verb+_+inverse}]
+If {\it NetHack\/} can, it should display glyphs next to objects in the
+inventory.
+%.lp
 \item[\ib{vary\verb+_+msgcount}]
 If {\it NetHack\/} can, it should display this number of messages at a time
 in the message window.
