--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -5513,7 +5513,7 @@ Use bold black instead of blue for black glyphs (TTY only).
 \item[\ib{use\verb+_+inverse}]
 If {\it NetHack\/} can, it should display inverse when the game specifies it.
 %.lp
-\item[\ib{use\verb+_+inverse}]
+\item[\ib{use\verb+_+menu\verb+_+glyphs}]
 If {\it NetHack\/} can, it should display glyphs next to objects in the
 inventory.
 %.lp
