--- a/README
+++ b/README
@@ -57,10 +57,11 @@ considered spoilers:
         level once that square's location becomes known (found or magic
         mapped); goes away once sanctum temple is found (entered or high altar
         mapped)
- -  savefile: add support to deconstruct internal data structures down into
-        their individual fields and save those fields instead of the entire
-        struct
- -  savefile: use little-endian format for fields where that makes a difference
+ -  savefile: add support for a tool to deconstruct data structures,
+        that get stored in a savefile, down into their individual fields and
+        save those individual fields instead of the entire struct. The
+        intention is to provide a way to export and transport savefiles
+        between platforms, architectures and data models. 
 
                         - - - - - - - - - - -
 
