--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -3164,7 +3164,7 @@ Some objects of subtle enchantment are difficult to identify without these.
 %.pg
 A scroll whose label is known can be read even when the hero is blind.
 If a scroll has been discovered, it will be listed in inventory by type
-rather than by label, but the label is known in that situtaion even though
+rather than by label, but the label is known in that situation even though
 it isn't shown.
 
 %.pg
