--- a/README
+++ b/README
@@ -110,8 +110,8 @@ Please read items (1), (2) and (3) BEFORE doing anything with your new code.
 
         Intel Pentium or better running Linux, BSDI
         Intel Pentium or better running Windows 10 or 11
-        Intel-based, or Apple M1, M2, M3 Macs running
-            macOS 10.11 (El Capitan) to macOS 14 (Sonoma)
+        Intel-based, or Apple M1, M2, M3, M4, M5 Macs running
+            macOS 10.11 (El Capitan) to macOS 26 (Tahoe)
             (follow the instructions in sys/unix/NewInstall.unx)
         Intel 80386 or greater running MS-DOS with DPMI
             built via djgpp compiler (native or Linux-hosted cross-compiler)
