Fix a typo going back to B news 2.11; 1986 (or earlier) according to tmac.n

--- a/doc/mn.7
+++ b/doc/mn.7
@@ -136,7 +136,7 @@ b	num	\-	i	used to embolden italics
 _bi \*Z	mac	\-	\-	print \*x in emboldened font 2, \*y after,
 				\*z before
 bm	num	1i,1i+1v	\-	height of bottom margin
-_bt	mac	\-	\-	print pottom title
+_bt	mac	\-	\-	print bottom title
 bt	num	.5i+1v	\-	bottom of footer to bottom of page
 _cf \*Z	mac	\-	\-	print contents of header line (double
 				quotes around \*x, \*y before, \*z after)
