Use geometry package to define page layout
This sets the size of the text on the page by using the geometry
package, which is now essentially standard procedure.

--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -1,13 +1,8 @@
 % NetHack 3.7  Guidebook.tex $NHDT-Date: 1745139202 2025/04/20 00:53:22 $  $NHDT-Branch: NetHack-3.7 $:$NHDT-Revision: 1.579 $ */
-\documentclass[titlepage, a4paper]{article}
+\documentclass[titlepage]{article}
 \usepackage{hyperref}
 \usepackage{longtable}
-
-\textheight 220mm
-\textwidth 160mm
-\oddsidemargin 0mm
-\evensidemargin 0mm
-\topmargin 0mm
+\usepackage[a4paper, text={160mm, 220mm}, centering]{geometry}
 
 \newcommand{\nd}{\noindent}
 
