some spelling and inconsistency corrections; comments and elsewhere

--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -48,7 +48,7 @@
 \author{Original version - Eric S. Raymond\\
 (Edited and expanded for 3.7.0 by Mike Stephenson and others)}
 %DO NOT REMOVE NH_DATESUB \date{Date(%B %-d, %Y)}
-\date{December 03, 2025}
+\date{December 11, 2025}
 
 \maketitle
 
@@ -3855,7 +3855,7 @@ is a section marker (the closing `{\tt \verb+]+}' can be followed
 by whitespace and then an arbitrary comment beginning with `{\tt \#}').
 The text between the square brackets is the section name.
 Section markers are only valid after a CHOOSE directive and their names
-are case insensitive.
+are case-insensitive.
 Lines after a section marker belong to that section up until another
 section starts or a marker without a name is encountered or the file ends.
 Lines within sections are ignored unless a CHOOSE directive has selected
@@ -5114,7 +5114,7 @@ or you are making screenshots or streaming video.
 Using the
 {\it statuslines:3\/}
 option is recommended so that there will be more room available for
-status information, unless you're using nethack's {\it Qt\/} interface
+status information, unless you're using NetHack's {\it Qt\/} interface
 or your terminal emulator window displays fewer than 25 lines.
 Persistent.
 %.lp
