Lua tests: code coverage for applying some items
Add a new debug flag prevent_pline, which prevents all messages
from going out to the UI. This prevents the tests from stopping
for -more-.
Add rudimentary tests for applying whistles, camera, and stethoscope.

--- a/doc/lua.adoc
+++ b/doc/lua.adoc
@@ -61,6 +61,7 @@ Set debugging flags.
 | mongen           | boolean | Do monsters generate
 | hunger           | boolean | Does hero's hunger-state increase
 | overwrite_stairs | boolean | Allow special-file commands overwrite the stairs
+| prevent_pline    | boolean | Prevent messages going out to the UI
 |===
 
 Example:
